<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/car_price"
        android:gravity="center"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/car_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/down_payment"
        android:gravity="center"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/down_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_price" />

    <TextView
        android:id="@+id/loan_period"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/loan_period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/down_payment" />

    <TextView
        android:id="@+id/interest_rate"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/interest_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_period" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/calculate"
        android:textColorHighlight="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_rate" />

    <TextView
        android:id="@+id/car_loan_result"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <TextView
        android:id="@+id/interest_rate_result"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthly_repayment_result" />

    <TextView
        android:id="@+id/monthly_repayment_result"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_loan_result" />

    <TextView
        android:id="@+id/result1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="82dp"
        android:text="@string/result1"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/car_loan_result"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_rate" />

    <TextView
        android:id="@+id/result2"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/result2"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/monthly_repayment_result"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result1" />

    <TextView
        android:id="@+id/result3"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/result3"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/interest_rate_result"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result2" />
//
    <EditText
        android:id="@+id/car_price_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/car_price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/car_price"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/down_payment_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/down_payment"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/down_payment"
        app:layout_constraintTop_toBottomOf="@+id/car_price_text" />

    <EditText
        android:id="@+id/interest_rate_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/interest_rate"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/interest_rate"
        app:layout_constraintTop_toBottomOf="@+id/loan_period_text" />

    <EditText
        android:id="@+id/loan_period_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/loan_period"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/loan_period"
        app:layout_constraintTop_toBottomOf="@+id/down_payment_text" />

</androidx.constraintlayout.widget.ConstraintLayout>